// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`balTopoToBanTopo > should return BanToponym with BanTopoID (1) 1`] = `
{
  "districtID": undefined,
  "id": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "labels": [
    {
      "isoCode": "fra",
      "value": "Route de la Baleine",
    },
  ],
  "meta": {
    "idfix": {
      "hash": "c6249c625f1c60373e85238cf92cc15e",
    },
  },
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balTopoToBanTopo > should return BanToponym with BanTopoID (2) 1`] = `
{
  "districtID": undefined,
  "id": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "labels": [
    {
      "isoCode": "fra",
      "value": "Route de la Baleine",
    },
  ],
  "meta": {
    "idfix": {
      "hash": "c6249c625f1c60373e85238cf92cc15e",
    },
  },
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balTopoToBanTopo > should return BanToponym with BanTopoID and BanDistrictID 1`] = `
{
  "districtID": "dddddddd-0000-4aaa-9000-1234567890ff",
  "id": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "labels": [
    {
      "isoCode": "fra",
      "value": "Route de la Baleine",
    },
  ],
  "meta": {
    "idfix": {
      "hash": "c830bd351f23cf5c9d7553cfb96bec80",
    },
  },
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balTopoToBanTopo > should return BanToponym with multilingual label 1`] = `
{
  "districtID": undefined,
  "id": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "labels": [
    {
      "isoCode": "fra",
      "value": "Route de la Baleine",
    },
    {
      "isoCode": "eus",
      "value": "Baleen ibilbidea",
    },
  ],
  "meta": {
    "idfix": {
      "hash": "ea0053807ccfac2e07b560674c3dae55",
    },
  },
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balTopoToBanTopo > should return BanToponym with overwrited data 1`] = `
{
  "districtID": "dddddddd-0000-4aaa-9000-1234567890ff",
  "id": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "labels": [
    {
      "isoCode": "fra",
      "value": "Avenue Rhoam Bosphoramus",
    },
  ],
  "meta": {
    "idfix": {
      "hash": "2c256b9980c13169842b46209d757b76",
    },
  },
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balTopoToBanTopo > should return BanToponym without BanTopoID 1`] = `
{
  "districtID": undefined,
  "id": undefined,
  "labels": [
    {
      "isoCode": "fra",
      "value": "Route de la Baleine",
    },
  ],
  "meta": {
    "idfix": {
      "hash": "4293639f09ff774a7553810f47eceb1d",
    },
  },
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balTopoToBanTopo > should return BanToponym without BanTopoID 2`] = `
{
  "districtID": undefined,
  "id": undefined,
  "labels": [
    {
      "isoCode": "fra",
      "value": "Route de la Baleine",
    },
  ],
  "meta": {
    "idfix": {
      "hash": "4293639f09ff774a7553810f47eceb1d",
    },
  },
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;
